# heat-pump-optimizer

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  hacs.json  pyproject.toml  simulate_ekf.py
.github/: CODEOWNERS
.github/workflows/: tests.yml  validate.yml
custom_components/heatpump_optimizer/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  savings_lite.py  savings_tracker.py  sensor.py  services.py  services.yaml  strings.json  switch.py
tests/: conftest.py  test_apparent_temperature.py  test_area_occupancy.py  test_aux_heat_learner.py  test_better_thermostat_features.py  test_binary_sensors.py  test_calendar_occupancy.py  test_coefficient_calibrator.py  test_coefficient_store.py  test_config_flow.py  test_counterfactual_profiler.py  test_data_types_enhanced.py  test_diagnostics.py  test_energy_sensors.py  test_entity_discovery.py  test_greybox_optimizer.py  test_greybox_optimizer_enhanced.py  test_history_bootstrap.py  test_occupancy.py  test_onboarding.py  test_options_flow_edge_cases.py  test_override_tracker.py  test_performance_model.py  test_performance_profiler.py  test_precondition_planner.py  test_profile_adapter.py  test_profile_control.py  test_profiler_primary.py  test_resilience.py  test_savings_tracker_solar.py  test_sensor_hub.py  test_sensor_resilience.py  test_services.py  test_shoulder_suppression.py  test_solar_profiler.py  test_strategic_occupancy.py  test_strategic_planner.py  test_switch.py  test_tactical_controller.py  test_thermal_estimator.py  (+2 more)
tools/: validate.py
(+39 files in other folders)
